Fixed right alignment issue

--- a/src/blocks/timeline/style.scss
+++ b/src/blocks/timeline/style.scss
@@ -530,9 +530,9 @@
 }
 
 /* RIGHT CSS STARTS */
-// .uagb-timeline__right {
-// 	text-align: right;
-// }
+.uagb-timeline__right {
+	text-align: right;
+}
 
 .uagb-timeline__right-block .uagb-timeline__day-right .uagb-timeline__arrow::after {
 	border-left: 13px solid #eee;
